<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fox\'s Magisk Module Manager</string>
    <string name="app_name_short">Fox\'s Mmm</string>
    <string name="fail_root_magisk">Could not access either Root or Magisk</string>
    <string name="fail_root_denied">Root has been denied via the Magisk app</string>
    <string name="fail_magisk_missing">Magisk is not installed on this device</string>
    <string name="loading">Loading…</string>
    <string name="updatable">Upgradable</string>
    <string name="installed">Installed</string>
    <string name="online_repo">Online Repo</string>
    <string name="showcase_mode">The app is in lockdown mode</string>
    <string name="failed_download">Could not download the file</string>
    <string name="slow_modules">Modules took too long to boot, consider disabling some modules</string>
    <string name="fail_internet">Could not connect to the Internet</string>
    <string name="no_web_view">Could not open system WebView</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_update_available">A new version of the app is available</string>
    <string name="app_update">Update app</string>
    <string name="no_desc_found">No description found.</string>
    <string name="download_module">Download module</string>
    <string name="install_module">Install module</string>
    <string name="update_module">Upgrade module</string>
    <string name="changelog">Changelog</string>
    <string name="website">Website</string>
    <string name="support">Support</string>
    <string name="donate">Donate</string>
    <string name="update">Update</string>
    <string name="install">Install</string>
    <string name="description">Description</string>
    <string name="uninstall">Uninstall</string>
    <string name="config">Config</string>
    <string name="favourite">Favourite</string>
    <string name="report_bugs">Report bugs</string>
    <string name="sniffed_modules">Sniffed modules</string>
    <string name="sniffing_modules">Sniffing modules</string>
    <string name="submit_modules">Submit a module</string>
    <string name="require_android_6">Requires Android 6.0+</string>
    <string name="require_android_12">Requires Android 12+</string>
    <string name="install_terminal_reboot_now">Reboot</string>
    <string name="language">Language</string>
    <string name="yes" translatable="false">@android:string/yes</string>
    <string name="no" translatable="false">@android:string/no</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="module_last_update">Last update:</string>
    <string name="module_repo">Repo:</string>
    <string name="module_by">by</string>
    <string name="module_downloads">Downloads:</string>
    <string name="module_stars">Stars:</string>
    <string name="module_needs_ramdisk">Needs ramdisk</string>
    <string name="module_needs_ramdisk_desc">This module need boot ramdisk to be installed</string>
    <string name="module_can_change_boot">Can change boot</string>
    <string name="module_can_change_boot_desc">This module may change the boot image</string>
    <string name="module_min_magisk_chip">Min. Magisk "%s"</string>
    <string name="module_min_sdk_chip">Min. Android</string>
    <string name="module_max_sdk_chip">Max. Android</string>
    <string name="manage_repos_pref">Manage repos</string>
    <string name="showcase_mode_pref">Lockdown mode</string>
    <string name="showcase_mode_desc">Lockdown mode prevents the manager from carrying out actions on modules</string>
    <string name="prevent_reboot_pref">Prevent reboot</string>
    <string name="prevent_reboot_desc">Prevents unexpected reboots</string>
    <string name="pref_category_settings">Settings</string>
    <string name="enable_monet">Enable Monet</string>
    <string name="pref_category_info">Info</string>
    <string name="show_licenses">Show licenses</string>
    <string name="licenses">Licences</string>
    <string name="show_incompatible_pref">Show incompatible modules</string>
    <string name="show_incompatible_desc">Show modules unlikely to work on your device based on their metadata</string>
    <string name="magisk_outdated">There is a new version of Magisk to install!</string>
    <string name="pref_category_repos">Repos</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_general">General</string>
    <string name="repo_main_desc">The repository hosting Magisk modules</string>
    <string name="repo_main_alt">An alternative to the Magisk-Modules-Repo with fewer restrictions.</string>
    <string name="master_delete">Delete the module files?</string>
    <string name="master_delete_no">Keep</string>
    <string name="master_delete_yes">Delete</string>
    <string name="master_delete_fail">Could not delete the module files</string>
    <string name="theme_pref">Theme</string>
    <string name="theme_mode_pref">Theme mode</string>
    <string name="module_id_prefix">Module ID: </string>
    <string name="install_from_storage">Install module from storage</string>
    <string name="invalid_format">The selected module has an invalid format</string>
    <string name="low_quality_module">Low-quality module</string>
    <string name="local_install_title">Local install</string>
    <string name="source_code">Source code</string>
    <string name="magisk_builtin_module">Magisk built-in module</string>
    <string name="substratum_builtin_module">Substratum built-in module</string>
    <string name="force_dark_terminal_title">Dark terminal</string>
    <string name="file_picker_failure">Your current file picker could not access the file.</string>
    <string name="remote_install_title">Remote install</string>
    <string name="file_picker_wierd">Your file picker returned a non-standard response.</string>
    <string name="use_magisk_install_command_pref" tools:ignore="TypographyDashes">Use the \"magisk --install-module\" command</string>
    <string name="use_magisk_install_command_desc">
        During testing it caused problems to the module install error diagnosis tool,
        so this option behind is hidden behind developer mode.\nTurn this on at your own risk!
    </string>
    <string name="dev_mode_enabled">Developer mode on</string>
    <string name="dev_mode_disabled">Developer mode off</string>
    <string name="force_english_pref">English app language</string>
    <string name="disable_low_quality_module_filter_pref">Show low-quality modules</string>
    <string name="disable_low_quality_module_filter_desc">
        Some modules do not declare their metadata properly, causing visual glitches,
        and/or indicating poor module quality.\nTurn this on at your own risk!
    </string>
    <string name="dns_over_https_pref">DNS over HTTPS</string>
    <string name="dns_over_https_desc">
        May fix connections issues in some cases.
        (Does not apply to WebView.)
    </string>
    <string name="disable_extensions_pref">No Mmm</string>
    <string name="disable_extensions_desc">
        Turn off Fox\'s Mmm extensions, preventing modules from using
        terminal extensions.\nUseful if a module misuses Fox\'s Mmm extensions.
    </string>
    <string name="wrap_text_pref">Text wrapping</string>
    <string name="wrap_text_desc">
        Show text on multiple lines instead of putting
        all text on the same line when installing a module.
    </string>
    <string name="enable_blur_pref">Blur</string>
    <string name="disable_chips_in_description">Disable chips in description</string>
    <string name="repo_enabled">Repo on</string>
    <string name="repo_disabled">Repo off</string>
    <string name="add_repo">Add Repo</string>
    <string name="remove_repo">Remove Repo</string>
    <string name="custom_url">Custom url</string>
    <string name="link_copied">Link copied</string>
    <string name="androidacy_repo_info">This repository may display some non-intrusive advertising to cover server and development costs. Features reviews, automatic virus scans, and more.</string>
    <string name="backup_module_list">Backup modules</string>
    <string name="restore_module_list">Restore modules</string>
    <string name="require_internet">This operation require an internet connection</string>
    <string name="androidacy_test_mode_pref">Androidacy test mode</string>
    <string name="androidacy_test_mode_desc">Use staging Androidacy endpoint instead of release endpoint. (Will restart app)</string>
    <string name="notification_update_title">Found %1$d module updates</string>
    <string name="notification_update_title_easter_egg">Sniffed %i module updates</string>
    <string name="notification_update_subtitle">Click to open the app</string>
    <string name="notification_update_pref">Automatic modules update check</string>
    <string name="notification_update_desc">May increase battery usage</string>
    <string name="notification_update_debug_pref">Test Notification</string>
    <string name="language_support_outdated">Some translations for the current language are
        not up-to-date, please consider contributing to the app translations on GitHub</string>
    <string name="language_translated_by">Translated by Fox2Code (Put your name here)</string>
    <string name="crash_reporting">Automatically report bugs and performance to the developers</string>
    <string name="restart">Restart</string>
    <string name="setup_message">Welcome! This app will help you install and manage Magisk modules. To get started, please select the options below. These and more can be configured from settings later.</string>
    <string name="setup_background_update_check">Automatic update check</string>
    <string name="setup_androidacy_repo">Enable the Androidacy repo</string>
    <string name="setup_magisk_alt_repo">Enable the Magisk Alt Repo</string>
    <string name="setup_crash_reporting">Enable Sentry</string>
    <string name="setup_custom_repos">You can add custom repos later in settings.</string>
    <string name="repos">Repos</string>
    <string name="misc">Miscellaneous</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">AMOLED Black</string>
    <string name="theme_transparent_light">Light (transparency)</string>
    <string name="theme_light">Light</string>
    <string name="action_settings">Settings</string>
    <string name="crash_text">Uh-oh, we hit a snag!</string>
    <string name="feedback_message">Give us more details about what you were doing when this happened. The more, the merrier!</string>
    <string name="feedback_submit">Submit and restart</string>
    <string name="please_feedback">Please help us out by telling us what you were trying to do when this happened.</string>
    <string name="feedback_name">Name (optional)</string>
    <string name="feedback_email">Email (optional)</string>
    <string name="crash_icon">Crash icon</string>
    <string name="copy_button">Copy text</string>
    <string name="crash_details">Unknown cause</string>
    <string name="more_details">More details may be found below.</string>
    <string name="reset_app">Reset the app</string>
    <string name="reset_warning">If you keep seeing this screen, resetting the app might help. This will clear app data but will not effect installed modules.</string>
    <string name="update_title">Update app</string>
    <string name="update_message">Please wait while we check for and install updates to FoxMMM. This may take a few minutes</string>
    <string name="update_button">Please wait…</string>
    <string name="online">Online</string>
</resources>