<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_category_settings">
        <ListPreference
            app:key="pref_theme"
            app:icon="@drawable/ic_baseline_palette_24"
            app:title="@string/theme_pref"
            app:defaultValue="system"
            app:entries="@array/theme_values_names"
            app:entryValues="@array/theme_values"
            app:singleLineTitle="false"	/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_force_english"
            app:icon="@drawable/ic_baseline_language_24"
            app:title="@string/force_english_pref"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_force_dark_terminal"
            app:icon="@drawable/ic_baseline_list_24"
            app:title="@string/force_dark_terminal_title"
            app:singleLineTitle="false"	/>

        <!-- Note: Lockdown mode used to be called showcase mode -->
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_showcase_mode"
            app:icon="@drawable/ic_baseline_lock_24"
            app:title="@string/showcase_mode_pref"
            app:summary="@string/showcase_mode_desc"
            app:singleLineTitle="false"	/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_wrap_text"
            app:icon="@drawable/ic_baseline_keyboard_return_24"
            app:title="@string/wrap_text_pref"
            app:summary="@string/wrap_text_desc"
            app:singleLineTitle="false"	/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_show_incompatible"
            app:icon="@drawable/ic_baseline_hide_source_24"
            app:title="@string/show_incompatible_pref"
            app:summary="@string/show_incompatible_desc"
            app:singleLineTitle="false"	/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_disable_low_quality_module_filter"
            app:icon="@drawable/ic_baseline_warning_24"
            app:title="@string/disable_low_quality_module_filter_pref"
            app:summary="@string/disable_low_quality_module_filter_desc"
            app:singleLineTitle="false"	/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_use_magisk_install_command"
            app:icon="@drawable/ic_baseline_numbers_24"
            app:title="@string/use_magisk_install_command_pref"
            app:summary="@string/use_magisk_install_command_desc"
            app:singleLineTitle="false"	/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_repos">
        <Preference
            app:key="pref_repo_main"
            app:icon="@drawable/ic_baseline_extension_24"
            app:summary="@string/repo_main_desc"
            app:title="@string/loading"
            app:singleLineTitle="false"	/>
        <Preference
            app:key="pref_repo_alt"
            app:icon="@drawable/ic_baseline_extension_24"
            app:summary="@string/repo_main_alt"
            app:title="@string/loading"
            app:singleLineTitle="false"	/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/pref_category_info">
        <Preference
            app:key="pref_update"
            app:icon="@drawable/ic_baseline_system_update_24"
            app:title="@string/app_update"
            app:singleLineTitle="false"	/>
        <Preference
            app:key="pref_source_code"
            app:icon="@drawable/ic_github"
            app:title="@string/source_code"
            app:singleLineTitle="false"	/>
        <Preference
            app:key="pref_show_licenses"
            app:icon="@drawable/ic_baseline_info_24"
            app:title="@string/show_licenses"
            app:singleLineTitle="false"	/>
    </PreferenceCategory>
</PreferenceScreen>