<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/bottom_nav_menu">
    <!-- two options: "Installed" and "Online" -->
    <item
        android:id="@+id/installed_menu_item"
        android:icon="@drawable/ic_baseline_extension_24"
        android:title="@string/installed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/online_menu_item"
        android:icon="@drawable/baseline_cloud_download_24"
        android:title="@string/online"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_menu_item"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>