<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="fill" android:orientation="vertical" android:paddingLeft="20dp" android:paddingRight="20dp" android:scrollbars="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/setup_message" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/repos"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/setup_androidacy_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:checked="false"
                android:key="pref_androidacy_repo_enabled"
                android:text="@string/setup_androidacy_repo"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/setup_magisk_alt_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/setup_magisk_alt_repo"
                android:checked="false"
                android:key="pref_magisk_alt_repo_enabled"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/setup_custom_repos"
                android:textAppearance="@android:style/TextAppearance.Material.Caption" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/misc"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/setup_crash_reporting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:checked="false"
                android:key="pref_crash_reporting_enabled"
                android:text="@string/setup_crash_reporting"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/setup_background_update_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:checked="false"
                android:key="pref_background_update_check"
                android:text="@string/setup_background_update_check"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <!-- Placeholder for future settings -->
            <!--<com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/setup_app_analytics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:checked="false"
                android:key="pref_app_analytics"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:text="@string/setup_app_analytics" />-->
        </LinearLayout>

    </ScrollView>
</LinearLayout>